--- a/Artifact/app.config
+++ b/Artifact/app.config
@@ -18,7 +18,7 @@
     <applicationSettings>
         <Artifact.Properties.Settings>
             <setting name="SoftName" serializeAs="String">
-                <value>中亿喊单神器</value>
+                <value>聊天工具</value>
             </setting>
         </Artifact.Properties.Settings>
     </applicationSettings>
